{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 121,
  "lineage": "52fb53e7-c70b-f27a-4153-59db86306022",
  "resources": [
    {
      "module": "module.instance1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gi_instance",
      "provider": "module.instance1.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:405204513974:instance/i-003cc786b3710815a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-076c0da1ccc1594bb",
                "throughput": 0,
                "volume_id": "vol-0dd67322563ecfc05",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003cc786b3710815a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gikp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c808fadd91dd5aa",
            "private_dns": "ip-172-31-13-40.us-east-2.compute.internal",
            "private_ip": "172.31.13.40",
            "public_dns": "ec2-3-128-31-234.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.31.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd67322563ecfc05",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "gi-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-947bdaff",
            "tags": {
              "project": "gameinsighter"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8cacb1e1be2d217"
            ]
          }
        }
      ]
    },
    {
      "module": "module.instance2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gi_instance",
      "provider": "module.instance2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:405204513974:instance/i-0597e60b08ad1baab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-076c0da1ccc1594bb",
                "throughput": 0,
                "volume_id": "vol-0a184d63e3e7da5c6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0597e60b08ad1baab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gikp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f73fcd94cab7e898",
            "private_dns": "ip-172-31-15-39.us-east-2.compute.internal",
            "private_ip": "172.31.15.39",
            "public_dns": "ec2-3-17-162-194.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.162.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a184d63e3e7da5c6",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "gi-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-947bdaff",
            "tags": {
              "project": "gameinsighter"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8cacb1e1be2d217"
            ]
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "aws_security_group",
      "name": "gi_lb_sg",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405204513974:security-group/sg-0a6187a2054ed7c5a",
            "description": "load-balancer-wizard-1 created on 2021-02-13T12:46:04.304-05:00",
            "filter": null,
            "id": "sg-0a6187a2054ed7c5a",
            "name": "gi-load-balancer",
            "tags": {},
            "vpc_id": "vpc-229b2249"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405204513974:vpc/vpc-229b2249",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-b476cddf",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-69c05202",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-229b2249",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f1f5b39a",
            "owner_id": "405204513974",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "gi_lb",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:loadbalancer/app/tf-lb-20210215184844660000000001/4b966bdca95f2c22",
            "arn_suffix": "app/tf-lb-20210215184844660000000001/4b966bdca95f2c22",
            "dns_name": "tf-lb-20210215184844660000000001-135388713.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:405204513974:loadbalancer/app/tf-lb-20210215184844660000000001/4b966bdca95f2c22",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210215184844660000000001",
            "security_groups": [
              "sg-0a6187a2054ed7c5a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028b9478"
              },
              {
                "subnet_id": "subnet-042a6c48"
              },
              {
                "subnet_id": "subnet-947bdaff"
              }
            ],
            "subnets": [
              "subnet-028b9478",
              "subnet-042a6c48",
              "subnet-947bdaff"
            ],
            "vpc_id": "vpc-229b2249",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.load_balancer.data.aws_security_group.gi_lb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gi_http_listener",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:listener/app/tf-lb-20210215184844660000000001/4b966bdca95f2c22/83be72e1ffcbd1f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:405204513974:listener/app/tf-lb-20210215184844660000000001/4b966bdca95f2c22/83be72e1ffcbd1f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:loadbalancer/app/tf-lb-20210215184844660000000001/4b966bdca95f2c22",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.gi_lb",
            "module.load_balancer.aws_lb_target_group.gi_lb_tg",
            "module.load_balancer.data.aws_security_group.gi_lb_sg",
            "module.load_balancer.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gi_lb_tg",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc",
            "arn_suffix": "targetgroup/gitg/22eb4dec4c7cc4cc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "gitg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-229b2249"
          },
          "dependencies": [
            "module.load_balancer.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gi_tg_instances",
      "provider": "module.load_balancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc-20210215184919459700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc",
            "target_id": "i-003cc786b3710815a"
          },
          "dependencies": [
            "module.instance1.aws_instance.gi_instance",
            "module.instance2.aws_instance.gi_instance",
            "module.load_balancer.aws_lb_target_group.gi_lb_tg",
            "module.load_balancer.data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc-20210215184919403600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:405204513974:targetgroup/gitg/22eb4dec4c7cc4cc",
            "target_id": "i-0597e60b08ad1baab"
          },
          "dependencies": [
            "module.instance1.aws_instance.gi_instance",
            "module.instance2.aws_instance.gi_instance",
            "module.load_balancer.aws_lb_target_group.gi_lb_tg",
            "module.load_balancer.data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "gi_rds_sg",
      "provider": "module.rds.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:405204513974:security-group/sg-0305f612370b18de2",
            "description": "Created by RDS management console",
            "filter": null,
            "id": "sg-0305f612370b18de2",
            "name": "gi-rds-sg",
            "tags": {},
            "vpc_id": "vpc-229b2249"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}